plugins {
    id 'java'
}

group 'com.lohika.workshop'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.10

repositories {
    mavenCentral()
}

jar {
    manifest {
        attributes 'Main-Class': 'com.lohika.workshop.modules.Main'
    }
}

def java_home = System.getenv('JAVA_HOME')
task link(type: Exec) {
    dependsOn 'clean'
    dependsOn 'jar'

    workingDir 'build'

    commandLine "${java_home}/bin/jlink", '--module-path', "libs${File.pathSeparatorChar}${java_home}/jmods",
            '--add-modules', 'workshopOne', '--output', 'dist', '--strip-debug',
            '--compress', '2', '--no-header-files', '--no-man-pages',
            '--launcher', 'hello=workshopOne/com.lohika.workshop.modules.Main'
}